--- a/README
+++ b/README
@@ -1,7 +1,19 @@
 The Church of the Least Fixed Point
 ICFP Programming Contest 2012
 
-TODO: Team members
+Miëtek Bak
+Aleksander Balicki
+Arek Flinik
+Maciej Kotowicz
+Tomasz Łoszko
+Jakub Michaliszyn
+Patryk Obara
+Wojtek Ogrodowczyk
+Luke Randall
+William Roe
+Rafał Rzepecki
+
+
 
 
 # Instructions
